<resources>
    <string name="app_name">My Application - Java</string>
    <string name="texto_alternativa_a">Resposta A</string>
    <string name="texto_alternativa_b">Resposta B</string>
    <string name="texto_alternativa_c">Resposta C</string>
    <string name="texto_img_fundo_neutro">Fundo da página com uma cidade em um pôr do sol</string>
    <string name="texto_bvnome">Seja Bem-Vindo à Missão Socorro</string>
    <string name="texto_iniciar">Iniciar</string>
    <string name="texto_voltar">></string>
    <string name="texto_nomeapp">Missão Socorro</string>
    <string name="texto_bemvindo">Bem Vindo</string>
    <string name="texto_idade">Escolha sua idade</string>
    <string name="texto_crianca">5 - 11</string>
    <string name="texto_adolescente">12 - 15</string>
    <string name="texto_seta">ᐊ</string>
    <string name="texto_continuar">Continuar</string>
    <string name="texto_começar">Começar</string>
    <string name="texto_inicial_crianca">Missão Socorro para Crianças</string>
    <string name="texto_inicial_adolescente">Missão Socorro para Adolescentes</string>
    <string name="texto_niveis">Níveis</string>
    <string name="texto_nivel1">Nível 1</string>
    <string name="texto_nivel2">Nível 2</string>
    <string name="texto_nivel3">Nível 3</string>
    <string name="texto_descricao_nivel_1">Vocês são quatro amigos inseparáveis - Clara, João, Mariana e Lucas. Certo dia você e seus amigos juntamente a escola realizam uma trilha em uma floresta onde aprenderiam um pouco mais sobre ciências através de plantas e insetos. Em suas bolsas carregam lanches, água, caderno para a pesquisa, um mapa, um kit simples de primeiros socorros e somente Clara tem um celular a disposição. Ao longo da trilha vocês se deparam com uma lagarta tanto quanto curiosa e decidem a ver por um curto período de tempo, quando de repente uma de suas amigas olha para frente e assustada diz que vocês se perderam dos colegas e professores. Cada decisão importa e o tempo é essencial para se ajudar um amigo. Estão prontos para serem os heróis dessa aventura?</string>
    <string name="texto_pergunta_1_crianca_nivel_1">João caiu e está com dor no tornozelo.\nO que você faz primeiro?</string>
    <string name="texto_opcao_p1_n1_a">Pede para ele ficar parado, verifica se o pé está inchado e coloca algo embaixo para deixar o pé elevado.</string>
    <string name="texto_opcao_p1_n1_b">Ajuda ele a se levantar com cuidado e tenta fazer ele andar devagar.</string>
    <string name="texto_opcao_p1_n1_c">Puxa João pelo braço para levantar logo e continuar andando.</string>
    <string name="texto_pergunta_2a_crianca_nivel_1">João continua sentado. Vocês colocam a mochila como apoio para o pé dele e tentam deixar ele mais confortável. O inchaço está ali, mas ele não está sangrando nem desmaiado.\nQual é o próximo passo?</string>
    <string name="texto_opcao_p2a_n1_a">Ficar com João, observar se ele está bem e esperar um pouco para que ele se recupere.</string>
    <string name="texto_opcao_p2a_n1_b">Ficar mexendo no pé dele para ver se melhora.</string>
    <string name="texto_opcao_p2a_n1_c">Deixar João sozinho e seguir em frente.</string>
    <string name="texto_pergunta_2b_crianca_nivel_1">João consegue levantar com ajuda, mas começa a mancar e sente muita dor. O pé dele está inchando rápido, e ele quase cai de novo. Vocês percebem que foi arriscado.\nO que é melhor fazer agora?</string>
    <string name="texto_opcao_p2b_n1_a">Ajudar ele a se sentar novamente e colocar algo para apoiar o pé.</string>
    <string name="texto_opcao_p2b_n1_b">Tentar fazer ele continuar andando mesmo com dor.</string>
    <string name="texto_opcao_p2b_n1_c">Deixar ele sentado e ir embora.</string>
    <string name="texto_pergunta_2c_crianca_nivel_1">João grita de dor ao ser puxado. O tornozelo parece machucado de verdade. Ele cai no chão de novo, ainda pior.\nO que você faz para corrigir?</string>
    <string name="texto_opcao_p2c_n1_a">Parar tudo, ajudar ele a se deitar, levantar o pé com a mochila e ficar ao lado dele.</string>
    <string name="texto_opcao_p2c_n1_b">Ficar parado, refletindo sobre o que deveria fazer.</string>
    <string name="texto_opcao_p2c_n1_c">Dizer para ele “aguentar firme” e seguir andando.</string>
    <string name="texto_pergunta_3a_crianca_nivel_1">Vocês decidem esperar para que seu amigo consiga se recuperar, oferecendo água e observando o inchaço. João está mais calmo e agradece a ajuda.\nPor que foi importante ficar com ele?</string>
    <string name="texto_opcao_p3a_n1_a">Porque ele pode piorar, e alguém precisa observar se ele está bem.</string>
    <string name="texto_opcao_p3a_n1_b">Porque ele pode querer conversar.</string>
    <string name="texto_opcao_p3a_n1_c">Porque é feio deixar amigo sozinho, mas não importa muito.</string>
    <string name="texto_pergunta_3b_crianca_nivel_1">Vocês tentam fazer o melhor, mas ainda estão um pouco confusos. João continua com dor, e o tempo vai passando...\nO que é melhor fazer agora?</string>
    <string name="texto_opcao_p3b_n1_a">Parar tudo, observar o ferimento e deixar o pé elevado.</string>
    <string name="texto_opcao_p3b_n1_b">Tentar colocar gelo das folhas (mesmo sem gelo de verdade).</string>
    <string name="texto_opcao_p3b_n1_c">Deixar João sozinho e correr.</string>
    <string name="texto_pergunta_3c_crianca_nivel_1">Vocês deixaram João sozinho para procurar os professores.\nComo corrigir isso?No meio do caminho, percebem que ele pode estar piorando sozinho lá atrás.</string>
    <string name="texto_opcao_p3c_n1_a">Voltar imediatamente e cuidar de João.</string>
    <string name="texto_opcao_p3c_n1_b">voltar andando devagar e observando.</string>
    <string name="texto_opcao_p3c_n1_c">Seguir sem pensar.</string>
    <string name="texto_descricao_nivel_2">Após cuidarem de João, o grupo decide fazer uma pequena pausa perto de um tronco caído. Mariana decide sentar para procurar em sua mochila algo para comer e ao abaixar e usar sua mão como apoio para se sentar, acaba encostando a mão em um galho seco com ponta afiada escondido entre as folhas. Ela acaba se arranhando e faz um corte na palma da mão. Ela sente uma dor repentina, o machucado não é muito profundo, mas está sangrando. Vocês têm o kit de primeiros socorros na mochila. O que fazer agora?</string>
    <string name="texto_pergunta_1_crianca_nivel_2">Mariana cortou a mão e está sangrando um pouco. O que você faz primeiro?</string>
    <string name="texto_opcao_p1_n2_a">Lava o corte com água limpa, usa um lenço limpo do kit para estancar o sangue e mantém a calma.</string>
    <string name="texto_opcao_p1_n2_b">Pede para ela colocar a mão na camiseta para estancar o sangue.</string>
    <string name="texto_opcao_p1_n2_c">Fica nervoso, sai correndo e grita para ela não mexer a mão.</string>
    <string name="texto_pergunta_2a_crianca_nivel_2">Você pega a garrafinha de água, lava o corte com cuidado e usa uma gaze limpa do kit para cobrir o ferimento. Mariana se sente melhor e sorri, mesmo ainda com dor. O que mais vocês podem fazer para ajudar?</string>
    <string name="texto_opcao_p2a_n2_a">Ficar de olho se o sangramento para, manter o curativo e acalmar Mariana.</string>
    <string name="texto_opcao_p2a_n2_b">Falar para ela ficar calma.</string>
    <string name="texto_opcao_p2a_n2_c">Tirar o curativo toda hora para ver como está o machucado.</string>
    <string name="texto_pergunta_2b_crianca_nivel_2">Mariana pressiona a mão contra a camiseta, e o sangramento diminui. Mas vocês percebem que a mão está suja, e que isso pode causar uma infecção e fazer doer mais. O que fazer agora?</string>
    <string name="texto_opcao_p2b_n2_a">Lavar a mão com água limpa e usar o kit de primeiros socorros.</string>
    <string name="texto_opcao_p2b_n2_b">Esperar mais um pouco para ver se melhora.</string>
    <string name="texto_opcao_p2b_n2_c">Dizer que é só um machucadinho e seguir em frente.</string>
    <string name="texto_pergunta_2c_crianca_nivel_2">Você se desespera e não consegue ajudar Mariana. Ela também fica assustada e o grupo começa a entrar em pânico. Como corrigir a situação?</string>
    <string name="texto_opcao_p2c_n2_a">Respirar fundo, usar o kit com calma e lavar a ferida com água.</string>
    <string name="texto_opcao_p2c_n2_b">Pedir para outra pessoa fazer tudo enquanto você só observa e diz pra ela se acalmar.</string>
    <string name="texto_opcao_p2c_n2_c">Ficar reclamando do acidente e não ajudar.</string>
    <string name="texto_pergunta_3a_crianca_nivel_2">Vocês cuidam do corte de forma calma e correta. Mariana está mais tranquila, e todos aprendem que um machucado pequeno também precisa de atenção. Por que foi importante cuidar direitinho do corte?</string>
    <string name="texto_opcao_p3a_n2_a">Porque um corte pode infeccionar e causar problemas e dor se não for limpo.</string>
    <string name="texto_opcao_p3a_n2_b">Porque ela ficou triste e precisava de carinho.</string>
    <string name="texto_opcao_p3a_n2_c">Porque se ela chorar muito, os professores vão brigar.</string>
    <string name="texto_pergunta_3b_crianca_nivel_2">Você tentou ajudar a acalma-la, mas sabemos que nesses momentos devemos ajudar nossos amigos a resolver o problema. Mariana fica com um pouco de dor, vocês aprenderam algo. O que é melhor fazer na próxima vez?</string>
    <string name="texto_opcao_p3b_n2_a">Usar o kit com calma e sempre limpar bem a ferida.</string>
    <string name="texto_opcao_p3b_n2_b">Pedir para alguém fazer tudo.</string>
    <string name="texto_opcao_p3b_n2_c">Deixar o machucado como está.</string>
    <string name="texto_pergunta_3c_crianca_nivel_2">Vocês não cuidaram do corte corretamente. Mariana está com a mão suja e agora ela sente mais dor. Como corrigir isso antes que piore?</string>
    <string name="texto_opcao_p3c_n2_a">Refazer o curativo com calma, usando o kit de forma limpa e segura.</string>
    <string name="texto_opcao_p3c_n2_b">Pedir ajuda, mas sem explicar o que aconteceu.</string>
    <string name="texto_opcao_p3c_n2_c">Ignorar o problema e continuar andando.</string>
    <string name="texto_descricao_nivel_3">O grupo segue pela trilha e, após algum tempo caminhando, começam a se sentir cansados. O clima está quente e o caminho é um tanto quanto desafiador. Durante a trilha Lucas diz estar se sentindo tonto, começa a suar muito e, de repente quando menos esperavam, ele desmaia. Ele cai no chão, mas ao checa-lo percebem que ele ainda está respirando. O grupo precisa agir rápido para garantir que ele recupere a consciência e se mantenha seguro.</string>
    <string name="texto_pergunta_1_crianca_nivel_3">Lucas desmaiou e está deitado no chão. O que você faz primeiro?</string>
    <string name="texto_opcao_p1_n3_a">Deitar Lucas de lado, levantar as pernas dele com ajuda da mochila e garantir que ele está respirar.</string>
    <string name="texto_opcao_p1_n3_b">Tentar acordá-lo imediatamente, sacudindo seu ombro com força.</string>
    <string name="texto_opcao_p1_n3_c">Deixar Lucas deitado e continuar procurando ajuda sem prestar atenção na situação.</string>
    <string name="texto_pergunta_2a_crianca_nivel_3">Você ajuda a deitar Lucas de lado, elevando as pernas dele para melhorar a circulação e garantir que ele possa respirar melhor. O grupo se mantém calmo e observa Lucas atentamente enquanto ele começa a recuperar a consciência.\nLucas começa a mexer os dedos e logo abre os olhos. Ele parece confuso, mas consegue falar.\nO que fazer agora?</string>
    <string name="texto_opcao_p2a_n3_a">Dar um pouco de água para Lucas, mantê-lo calmo e esperar até que ele se recupere completamente.</string>
    <string name="texto_opcao_p2a_n3_b">Tentar fazer Lucas se levantar de imediato, já que ele parece estar acordando.</string>
    <string name="texto_opcao_p2a_n3_c">Deixar Lucas deitado e sair para procurar os professores sem garantir que ele está bem.</string>
</resources>