<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/criancainicial"
    tools:context=".DLogicaNiveisCrianca">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/forma_botao_circular_branco"
            android:text="@string/texto_seta"
            android:textColor="@color/cor_preta_1" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="630dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/texto_niveis"
            android:background="@color/cor_preta_2"
            android:textColor="@color/cor_branca_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_resposta_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/forma_botao_retangular_final"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_nivel1"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_nivel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/forma_botao_retangular_final"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_nivel2"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_nivel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/forma_botao_retangular_final"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_nivel3"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>