<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicial"
    tools:context=".FLogicaQuestoesN1C">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/forma_botao_circular_branco"
            android:text="@string/texto_seta"
            android:textColor="@color/cor_preta_1" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/cor_preta_2"
            android:text="ALTERAR"
            android:textColor="@color/cor_branca_1"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txv_descricao_niveis"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/cor_preta_2"
            android:gravity="center_horizontal"
            android:text="adicionarei uma lista aqui"
            android:textColor="@color/cor_branca_1"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btn_alternativa_a"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/forma_botao_retangular_arredondado_branco"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_alternativa_a"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_alternativa_b"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/forma_botao_retangular_arredondado_branco"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_alternativa_b"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_alternativa_c"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/forma_botao_retangular_arredondado_branco"
            android:backgroundTint="@color/cor_branca_1"
            android:text="@string/texto_alternativa_c"
            android:textColor="@color/cor_preta_1"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>